--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     
 </body>
 </html>
-<h1>Vai ser uma imagem aqui</h1>
+<h1></h1>
 
 </body>
 </html>
 <title>Document</title>
   <link rel="stylsheet" href="style.css">
+  <header>
+<header class="cabecalho">
+  <img class="cabecalho-imagem" src="./img/Alura.png" alt="logo da alurastar">
+  <ul class="cabecalho-imagem-item">
+    <li>Estudantes</li>
+    <li>Escola</li>
+  </ul>
