--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+      <header class="cabecalho">
+        <img class="cabecalho-imagem" src="./alurastart logo 1.png">
+        <li class="cabecalho-lista-item">Estudante</li>
+        <li class="cabecalho-lista-item">Escola</li>
+      
 </body>
-</html>
-<h1></h1>
-
-</body>
-</html>
 <title>Document</title>
-  <link rel="stylsheet" href="style.css">
-  <header>
-<header class="cabecalho">
-  <img class="cabecalho-imagem" src="./img/Alura.png" alt="logo da alurastar">
-  <ul class="cabecalho-imagem-item">
-    <li>Estudantes</li>
-    <li>Escola</li>
-  </ul>
+ <link rel="stylsheet" href="style.css">
+</html>
+<header>
+<section class="Escola"
+    <div class="escola-conteúdo">
+    <h2 class="escola título">sobre a Escola</h2>
+    <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação</p>
+    <p class="escola-texto-dois">A turma mais famosa é a Segunda serie A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega exelentes resultados</p>
+    </div>
+    <img src="./Formula-amico 1.png"> <img class="Escola-imagem" {width: 25%; }>
+  </section>
+</header>
+ <link rel="stylesheet" href="stile.css"
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+</head>
